# tt

./: AI-System-Installer.spec  AI-System.bat  AI-System.spec  CODING_MISTAKES_FIXED.md  COMPREHENSIVE_AUDIT_REPORT.md  Cargo.toml  FINAL_FIXES_SUMMARY.md  FINAL_STATUS_REPORT.md  FIXES_APPLIED_SUMMARY.md  INSTALLATION_GUIDE.md  INSTALLATION_SUMMARY.md  LICENSE  README.md  README_SIMPLE.md  build_exe.py  build_installer.bat  build_qt_app.py  build_standalone_installer.py  build_windows_installer.bat  create_exe.py  create_windows_exe.py  docker-compose.yml  install.sh  install_executable.py  install_windows.bat  install_windows.ps1  install_windows_standalone.exe.py  rebuild_enhanced_installer.py  requirements.txt  requirements_core.txt  requirements_qt.txt  run.py  setup.py  test_imports.py  verify_complete_installation.py  verify_installation.py
AI-System-Complete-Backup/: Dockerfile  ERROR_FIXES_SUMMARY.md  INSTALLATION_GUIDE.md  create_installer.py  requirements.txt
AI-System-Complete-Backup/config/: config.json
AI-System-Complete-Backup/docs/: system_architecture.md
ai_artworks/: __init__.py  __version__.py  main.py
ai_artworks/agents/: base_agent.py
ai_artworks/api/: enterprise_api.py
ai_artworks/core/: advanced_shaders.py  ai_agents.py  consciousness_matrix.py  consciousness_matrix_ultra.py  consciousness_monitor.py  consciousness_simulation.py  gpu_canvas.py  image_processor.py  maximum_overdrive.py  multi_agent_system.py  multiverse_analyzer.py  neural_processor.py  neural_swarm.py  neural_visualizer.py  performance_monitor.py  plugin_manager.py  project_manager.py  quantum_core.py  quantum_engine.py  rag_system.py  reality_engine.py  ultimate_integration.py  voice_interface.py
config/: system_config.json
deployment/: Dockerfile  docker-compose.yml  prometheus.yml  start.sh
docs/: README.md
installer_output/: AI-System-Setup.exe.sha256  README.txt
requirements/: requirements.txt
src/: __init__.py  main.py
tests/: __init__.py  conftest.py  run_tests.py  test_ai_rag_engine.py  test_core_config.py  test_core_orchestrator.py  test_sensors_fusion.py
(+54 files in other folders)
