[package]
name = "ai-system"
version = "1.0.0"
edition = "2021"
authors = ["AI System Team"]
description = "High-performance components for AI System"
license = "MIT"
repository = "https://github.com/ai-system/ai-system"

[lib]
name = "ai_system_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Performance
rayon = "1.8"
crossbeam = "0.8"
dashmap = "5.5"
parking_lot = "0.12"

# System interfaces
libc = "0.2"
nix = "0.27"
sysinfo = "0.29"

# Networking
reqwest = { version = "0.11", features = ["json", "stream"] }
tungstenite = "0.20"
tokio-tungstenite = "0.20"

# Cryptography
ring = "0.17"
rustls = "0.21"
webpki-roots = "0.25"

# Data structures
indexmap = "2.1"
smallvec = "1.11"
bytes = "1.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.13"
clap = { version = "4.4", features = ["derive"] }

# Math and ML
ndarray = "0.15"
candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"

# Python integration
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tokio-test = "0.4"

[[bench]]
name = "performance"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[features]
default = ["python-bindings"]
python-bindings = ["pyo3"]
gpu-acceleration = ["candle-core/cuda"]
system-monitoring = ["sysinfo"]
network-protocols = ["reqwest", "tungstenite"]

[workspace]
members = [
    "rust-components/kernel-driver",
    "rust-components/sensor-fusion",
    "rust-components/performance-monitor",
    "rust-components/crypto-engine"
]